--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port = 9090
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=postgres
 spring.datasource.password=123
+
+logging.level.org.springframework.transaction.interceptor = TRACE
